scss/profile.scss
@import "style";

.header .container {
  background: transparent;
}

.hero {
  background: url(../assets/img/07_item/img_bg_page_title_dark.jpg);
  background-size: cover;
  background-position: center;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  .container {
    display: flex;
    flex-direction: column;
    gap: 1.25rem;
    margin-top: 12.5rem;
    margin-bottom: 7rem;
  }

  .hero__item-path {
    color: var(--gray-2);
  }
}

.hero--light {
  background: url(../assets/img/07_item/item-header-bg-light.jpg);
  background-position: center;
  background-size: cover;
}

.header {
  margin-bottom: 28rem;
}
.header-clearfix {
  margin-bottom: 33rem !important;
}

// =======

.profile {
  display: grid;
  grid-template-columns: 300px auto;
  gap: 8rem;

  @media screen and (max-width: 1100px) {
    grid-template-columns: 250px auto;
    gap: 3rem;
  }
  @media screen and (max-width: 650px) {
    grid-template-columns: 1fr;
    gap: 3rem;
  }
}

.profile__rt {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: min-content;
  gap: 3rem;
}

.profile__user-card.card {
  gap: 0;
  width: initial;
  height: initial;
  min-width: initial !important;
  background: var(--card-bg-color);

  .card__img {
    margin-bottom: 1rem;
  }
}

.profile__choice-cover {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.choice-cover-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 100px;
  grid-auto-rows: 100px;
  gap: 1rem;

  @media screen and (max-width: 1100px) {
    grid-template-columns: 1fr;
  }

  & > div {
    border-radius: 0.75rem;
    overflow: hidden;
    border: 2px solid var(--input-border-color);
    transition: border 0.3s;
  }

  .choice-cover__col2 {
    background: url(../assets/img/08_profile/covers/cover-01.jpg);
    background-position: center;
  }
  .choice-cover__col3 {
    background: url(../assets/img/08_profile/covers/cover-02.jpg);
    background-position: center;
  }

  .choice-cover__col {
    img {
      object-fit: cover;
    }

    &:hover {
      border: 4px solid #e251e6;
    }
  }
}

.secondary-btn {
  border-radius: 5rem;
  background: transparent;
  color: var(--primary-text-color);
  border: 2px solid var(--primary-text-color);
  height: 4.4rem;
  transition: opacity 0.6s ease, box-shadow 0.5s, background 0.4s, color 0.3s;
  i {
    transition: color 0.4s;
  }
  &:hover {
    color: var(--primary-text-color-reverse);
    background-color: var(--primary-text-color);

    i {
      color: var(--primary-color);
    }
  }
}

.profile__form {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: min-content;
  gap: 3rem;

  @media screen and (max-width: 1100px) {
    grid-template-columns: 1fr;
  }

  .secondary-btn {
    width: max-content;
  }
}

.form-container {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;

  .input-container {
    display: flex;
    flex-direction: column;
    gap: 0.7rem;
    align-items: flex-start;
  }
}

.input-primary {
  border-radius: 0.8rem;
  border: 2px solid var(--input-border-color);
  background: transparent;
  outline: none;
  padding: 1rem 1.5rem;

  &::placeholder {
    color: #7b7a8b;
    font-weight: 500;
  }
}

.social-btn {
  background: #5142fb;
  color: var(--white);
  border: none;
  border-radius: 3rem;
  padding: 1rem 1rem 1rem 2.75rem;
  display: flex;
  gap: 1.25rem;
  width: 240px;
  cursor: pointer;

  i {
    position: relative;
    transition: transform 0.5s;
  }
  p {
    position: relative;
    transition: transform 0.5s;
  }
  .fa-link {
    transform: scale(0);
  }
  &:hover {
    i.fa-brands {
      transform: scale(0);
    }
    p {
      transform: translateX(-30px);
    }
    .fa-link {
      transform: scale(1);
    }
  }
}

